add new block content + minor edits

--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -22,7 +22,7 @@
 
             <div class="work-time">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg>
-                <span>
+                <span class="work-time__days">
                     <span class="fw-medium">пн-пт:</span> с 8:00 до 18:00 <br>
                     <span class="fw-medium">сб, вс:</span> выходной
                 </span>
@@ -34,7 +34,7 @@
                     <a href="tel:73842215443">+7 (3842) 21-54-43</a>
                 </div>
                 <div class="phone__callback">
-                    <button class="button">Заказать звонок</button>
+                    <button class="button button--secondary">Заказать звонок</button>
                 </div>
             </div>
             
